fix header background image height on small width screens Fixes #512

--- a/css/dark.css
+++ b/css/dark.css
@@ -18,7 +18,7 @@ h1 {
   height: auto;
   background-repeat: no-repeat;
 	background-image: url("https://www.lopp.net/images/bkg-2.webp");
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 .jumbotron a:link {
 	color: #ffffff;
@@ -41,7 +41,7 @@ h1 {
   height: auto;
   background-repeat: no-repeat;
 	background-image: url("https://www.lopp.net/images/bkg-2.webp");
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 .well {
 	font-size: 11px;
