--- a/css/style.css
+++ b/css/style.css
@@ -32,7 +32,7 @@ h1 {
   height: auto;
   background-repeat: no-repeat;
 	background-image: url("https://www.lopp.net/images/bkg-1.webp");
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 .jumbotron a:link {
 	color: #000000;
@@ -55,7 +55,7 @@ h1 {
   height: auto;
   background-repeat: no-repeat;
 	background-image: url("https://www.lopp.net/images/bkg-1.webp");
-  background-size: 100%;
+  background-size: 100% 100%;
 }
 .well {
 	font-size: 11px;
